100/ Added recharged animation for axe.
101/ If player releases LMB during axe recharge animation then the animation will be cancelled and player can attack right away.
102/ Added snow forest into world generation.
103/ Optimized Create_Biome codes for zone to be ignored using smarter chunk generation.
104/ Made small progress on Trial Archer.
105/ Added Trial tile for trial editor.
106/ Nerfed Sniper Rifle, no longer have 50% chance to 1 shot anything, now instead a 0.1% instead, hf.
107/ Significantly buff general shortsword.
108/ Implemented item variant system.
109/ Modified Artifact system to allow for starter item to be added.
110/ Added new Vampire Knives variant.
111/ Modified Gem staff to not be affected by attack speed stats.
112/ Gem staff now have alt-click attack.
113/ Minor buff to Diamond Staff and Ruby Staff.
114/ Modified player starter loot to be less.
115/ Made it so that upon opening a very special skill lootbox, skill UI are automatically open if player has the skill orb.
116/ Added starter item into Fury Emblem.
117/ Buff Heat Ray by increasing the cap from 100 to 200.
118/ Added starter item into Chalice of Royal Gel.
119/ Added new variant for slime staff and volcano sword.
120/ Changed activate condition of Night Terror perk.
121/ Removed Jungle Temple and Dungeon biome from world generation.
122/ Added 2 new subworlds.
123/ Added utils for subworld.
124/ Fixed problem where jump boost stats doesn't affect player jump boost.
125/ Buff Viking Helmet using modded piece system.
126/ General Builder Tool when override tile will check the current hover tile is the same as selected tile.
127/ Buff Goggles using modded piece system.
128/ Changed Token of Wrath and its exclusive perk.
129/ Added starter item into Token of Sloth.
130/ Changed Wooden type bow enchantment.
131/ Added scroll of fire, water and magic missile
132/ Added scroll of teleportation.
133/ Minor small updated to Enchantment system variable